--- a/formulario.html
+++ b/formulario.html
@@ -2,11 +2,7 @@
 <html lang="en">
 <head>
     
-<<<<<<< HEAD
-    <title>Documento rodolfo</title>
-=======
-    <title>documento jesus</title>
->>>>>>> 95fcd16196ce0ea21b3ff2578bd5ea4fa86d0882
+    <title>Documento</title>
 </head>
 <body>
     
